Fix aligning on the Persoanl section

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -102,8 +102,11 @@ h2 {
 }
 .innerFormDiv {
   display: flex;
+  justify-content: space-between;
+  align-content: space-between;
   gap: var(--outerGap);
   padding: var(--miniPadding);
+  /*   min-width: 45vw; */
 }
 label {
   display: flex;
@@ -185,15 +188,15 @@ label {
 .personalInputWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 #ageInpt {
-  max-width: 30px;
+  max-width: 25px;
 }
 
 /*Forces it to stay the same size as the div on mobile/PC*/
-#nameInpt,
+/* #nameInpt,
 #locationInpt {
-  max-width: clamp(86px, 163px, 20vw);
+  max-width: clamp(88px, 160px, 20vw);
 }
+ */
